[tool.poetry]
name = "ml-mipt"
version = "1.0.0"
description = "Machine learning course at MIPT"
authors = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>, Radoslav Neychev <neychev@phystech.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"
pandas = "^1.2.2"
numpy = "^1.20.1"
scipy = "^1.6.0"
statsmodels = "^0.12.2"
seaborn = "^0.11.1"
Pillow = "^8.1.0"
xgboost = "^1.3.3"
opencv-python = "^4.5.1"
torch = "^1.7.1"
torchvision = "^0.8.2"
torchsummary = "^1.5.1"
h5py = {version = "^3.1.0", optional = true, comment = "parse cats and dogs dataset"}
pydotplus = {version = "^2.0.2", optional = true, comment = "graph visualization"}
tqdm = {version = "^4.56.2", optional = true, comment = "not recommended, but used in notebooks"}
eli5 = {version = "^0.11.0", optional = true, comment = "week0_07 feature importance"}
PDPbox = {version = "^0.2.0", optional = true, comment = "week0_07 feature importance"}
shap = {version = "^0.38.1", optional = true, comment = "week0_07 feature importance"}
scikit-image = {version = "^0.18.1", optional = true, comment = "week0_12 imread and resize"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
ipykernel = "^5.4.3"

[tool.black]
line-length = 100
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
lines_after_imports = 2

[tool.nbqa.mutate]
black = 1
isort = 1

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
