[tool.poetry]
name = "ml-basic"
version = "1.0.0"
description = "Machine learning course at MIPT"
authors = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>, Radoslav Neychev <neychev@phystech.edu>"]
license = "MIT License"

# old packages

# scikit-learn = "^0.24.1"
# matplotlib = "^3.3.4"
# pandas = "^1.2.2"
# numpy = "^1.20.1"
# scipy = "^1.6.0"
# statsmodels = "^0.12.2"
# seaborn = "^0.11.1"
# xgboost = "^1.3.3"
# opencv-python = "^4.5.1"
# torch = "^1.7.1"
# torchvision = "^0.8.2"
# torchsummary = "^1.5.1"

# # basic
# Pillow = {version = "^7.2.0", optional = true} # TODO: remove
# tqdm = {version = "^4.56.2", optional = true} # TODO: remove
# scikit-image = {version = "^0.18.1", optional = true} # TODO: remove week0_12 imread and resize
# h5py = {version = "^3.1.0", optional = true} # parse cats and dogs dataset, maybe remove?
# pydotplus = {version = "^2.0.2", optional = true} # graph visualization
# eli5 = {version = "^0.11.0", optional = true} # week0_07 feature importance
# PDPbox = {version = "^0.2.0", optional = true} # week0_07 feature importance
# shap = {version = "^0.38.1", optional = true} # week0_07 feature importance

# # advanced
# ipywidgets = "^7.6.3" # week1_15 downloading mnist via torchvision

# # nlp
# nltk = "^3.5"
# gensim = "^3.8.3"
# spacy = "^3.1.1"
# subword-nmt = "^0.3.7"

# pytorch-transformers = "^1.2.0"
# torchtext = "^0.8"

# bokeh = "^2.3.0"

# # rl
# gym = {version = "^0.18.0", optional = true}
# graphviz = "^0.16"

# [tool.poetry.extras]
# basic = ["Pillow", "tqdm", "scikit-image", "h5py", "pydotplus", "eli5", "PDPbox", "shap"]
# nlp = ["nltk", "gensim", "spacy", "subword-nmt", "pytorch-transformers", "torchtext", "bokeh"]
# rl = ["gym", "graphviz"]

# dev deps
# pre-commit = "^3.8.0"
# ipykernel = "^6.29.5"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
